--- a/practico2/styles.css
+++ b/practico2/styles.css
@@ -20,3 +20,17 @@ body {
       margin-top: 10px;
     }
 }
+
+#resultados {
+  max-height: 300px; 
+  overflow-y: auto; 
+}
+
+.resultado-jugada {
+  background-color: #f2f2f2; 
+  margin-bottom: 10px; 
+  padding: 10px; 
+  border-radius: 5px; 
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); 
+}
+
