--- a/practico2/styles.css
+++ b/practico2/styles.css
@@ -22,11 +22,12 @@ body {
 }
 
 #resultados {
-  max-height: 300px; 
+  max-height: 600px; 
   overflow-y: auto; 
 }
 
 .resultado-jugada {
+  height: 300px; 
   background-color: #f2f2f2; 
   margin-bottom: 10px; 
   padding: 10px; 
