--- a/practico2/styles.css
+++ b/practico2/styles.css
@@ -22,16 +22,53 @@ body {
 }
 
 #resultados {
-  max-height: 600px; 
-  overflow-y: auto; 
+  max-height: 600px;
+  overflow-y: auto;
+  background-color: #f7f7f7;
+  margin-bottom: 20px;
+  padding: 20px;
+  border-radius: 10px;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
 }
 
-.resultado-jugada {
-  height: 300px; 
-  background-color: #f2f2f2; 
-  margin-bottom: 10px; 
-  padding: 10px; 
-  border-radius: 5px; 
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); 
+#resultados .jugada-numero {
+  font-size: 20px;
+  margin-bottom: 10px;
+  font-weight: bold;
 }
 
+#resultados .jugada-info {
+  font-size: 16px;
+  margin-bottom: 10px;
+}
+
+#resultados .jugada-info:last-child {
+  margin-bottom: 0;
+}
+
+#resultados .ganador {
+  color: #1abc9c;
+  font-weight: bold;
+}
+
+#resultados .perdedor {
+  color: #e74c3c;
+  font-weight: bold;
+}
+
+#resultados-finales {
+  background-color: #f7f7f7;
+  padding: 20px;
+  border-radius: 10px;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+}
+
+#resultados-finales h2 {
+  font-size: 24px;
+  margin-bottom: 10px;
+}
+
+#resultados-finales .resultado-final {
+  font-size: 18px;
+  margin-bottom: 10px;
+}
